# youtube-qa-summarizer

./: .gitignore  README.md  app.py  gradio_app.py  main.py  pyproject.toml  requirements.txt  summarizer.py  utils.py
templates/: index.html
