[project]
name = "qa-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "gradio>=6.14.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "streamlit>=1.57.0",
    "urllib3<2.0.0",
    "uvicorn>=0.47.0",
    "validators>=0.35.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
